--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Snake Game By Charles</title>
+    <title>Snake Game</title>
     <style>
         body {
             display: flex;
@@ -34,6 +34,18 @@
         };
 
         document.addEventListener("keydown", changeDirection);
+        
+        const controls = {
+            up: document.getElementById("up"),
+            down: document.getElementById("down"),
+            left: document.getElementById("left"),
+            right: document.getElementById("right")
+        };
+
+        controls.up.addEventListener("click", () => changeDirection({ key: "ArrowUp" }));
+        controls.down.addEventListener("click", () => changeDirection({ key: "ArrowDown" }));
+        controls.left.addEventListener("click", () => changeDirection({ key: "ArrowLeft" }));
+        controls.right.addEventListener("click", () => changeDirection({ key: "ArrowRight" }));
 
         function changeDirection(event) {
             const key = event.key;
@@ -79,7 +91,15 @@
             snake.unshift(head);
         }
 
-        setInterval(draw, 100);
+        setInterval(draw, 150);
     </script>
+    <div style="position: absolute; bottom: 20px; display: flex; flex-direction: column; align-items: center;">
+        <button id="up">▲</button>
+        <div>
+            <button id="left">◀</button>
+            <button id="down">▼</button>
+            <button id="right">▶</button>
+        </div>
+    </div>
 </body>
 </html>
