--- a/index.html
+++ b/index.html
@@ -35,18 +35,6 @@
 
         document.addEventListener("keydown", changeDirection);
         
-        const controls = {
-            up: document.getElementById("up"),
-            down: document.getElementById("down"),
-            left: document.getElementById("left"),
-            right: document.getElementById("right")
-        };
-
-        controls.up.addEventListener("click", () => changeDirection({ key: "ArrowUp" }));
-        controls.down.addEventListener("click", () => changeDirection({ key: "ArrowDown" }));
-        controls.left.addEventListener("click", () => changeDirection({ key: "ArrowLeft" }));
-        controls.right.addEventListener("click", () => changeDirection({ key: "ArrowRight" }));
-
         function changeDirection(event) {
             const key = event.key;
             if (key === "ArrowUp" && direction !== "DOWN") direction = "UP";
@@ -61,7 +49,7 @@
             ctx.fillStyle = "red";
             ctx.fillRect(food.x, food.y, box, box);
 
-            ctx.fillStyle = "lime";
+            ctx.fillStyle = "green";
             snake.forEach((segment, index) => {
                 ctx.fillRect(segment.x, segment.y, box, box);
                 ctx.strokeStyle = "black";
@@ -92,6 +80,18 @@
         }
 
         setInterval(draw, 150);
+
+        const controls = {
+            up: document.getElementById("up"),
+            down: document.getElementById("down"),
+            left: document.getElementById("left"),
+            right: document.getElementById("right")
+        };
+
+        controls.up.addEventListener("click", () => changeDirection({ key: "ArrowUp" }));
+        controls.down.addEventListener("click", () => changeDirection({ key: "ArrowDown" }));
+        controls.left.addEventListener("click", () => changeDirection({ key: "ArrowLeft" }));
+        controls.right.addEventListener("click", () => changeDirection({ key: "ArrowRight" }));
     </script>
     <div style="position: absolute; bottom: 20px; display: flex; flex-direction: column; align-items: center;">
         <button id="up">▲</button>
@@ -102,4 +102,4 @@
         </div>
     </div>
 </body>
-</html>
+    </html>
