--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Sacramento&display=swap');
 
-        /* Animated Heart Background */
         body {
             display: flex;
             justify-content: center;
@@ -19,31 +18,6 @@
             position: relative;
         }
 
-        /* Heart Animation */
-        .heart {
-            position: absolute;
-            width: 20px;
-            height: 20px;
-            background: red;
-            clip-path: polygon(50% 0%, 100% 35%, 80% 100%, 50% 80%, 20% 100%, 0% 35%);
-            animation: float 5s infinite ease-in-out;
-            opacity: 0.6;
-        }
-
-        @keyframes float {
-            0% { transform: translateY(0) scale(1); opacity: 0.6; }
-            50% { transform: translateY(-50px) scale(1.2); opacity: 1; }
-            100% { transform: translateY(-100px) scale(1); opacity: 0.6; }
-        }
-
-        /* Creating Multiple Hearts */
-        .heart:nth-child(1) { left: 10%; animation-duration: 4s; }
-        .heart:nth-child(2) { left: 30%; animation-duration: 6s; }
-        .heart:nth-child(3) { left: 50%; animation-duration: 5s; }
-        .heart:nth-child(4) { left: 70%; animation-duration: 7s; }
-        .heart:nth-child(5) { left: 90%; animation-duration: 6s; }
-
-        /* Question Box */
         .container {
             text-align: center;
             background: white;
@@ -98,23 +72,17 @@
             margin-top: 20px;
         }
 
-        video {
+        iframe {
             width: 100%;
             max-width: 400px;
+            height: 250px;
             display: none;
             border-radius: 15px;
             box-shadow: 0 0 15px rgba(0, 0, 0, 0.4);
         }
     </style>
 </head>
-<body>
-
-    <!-- Floating Hearts for Animation -->
-    <div class="heart"></div>
-    <div class="heart"></div>
-    <div class="heart"></div>
-    <div class="heart"></div>
-    <div class="heart"></div>
+<body onload="playVideo('yes')">
 
     <div class="container">
         <h1>ARE YOU CHARLES' BEST FRIEND? ❤️</h1>
@@ -123,14 +91,8 @@
             <button class="no-btn" onclick="playVideo('no')">No</button>
         </div>
         <div class="video-container">
-            <video id="yesVideo" controls>
-                <source src="https://www.mediafire.com/file/c1vgezonunyop9t/1740927543326.mp4/file" type="video/mp4">
-                Your browser does not support the video tag.
-            </video>
-            <video id="noVideo" controls>
-                <source src="https://www.mediafire.com/file/gjrmeth6cnra8ta/1740927631124.mp4/file" type="video/mp4">
-                Your browser does not support the video tag.
-            </video>
+            <iframe id="yesVideo" src="https://drive.google.com/file/d/1-A2SmwlshTr3vopCZq5EdOvUCBhnUKCL/preview" allowfullscreen></iframe>
+            <iframe id="noVideo" src="https://drive.google.com/file/d/1-BOtI4ureAgSjoUiGyKt_c5f96rplfrr/preview" allowfullscreen></iframe>
         </div>
     </div>
 
@@ -139,19 +101,19 @@
             var yesVideo = document.getElementById("yesVideo");
             var noVideo = document.getElementById("noVideo");
 
-            // Pause and hide both videos first
-            yesVideo.pause();
+            // Hide both videos first and reset them
             yesVideo.style.display = "none";
-            noVideo.pause();
             noVideo.style.display = "none";
+
+            // Stop both videos before playing the selected one
+            yesVideo.src = yesVideo.src;
+            noVideo.src = noVideo.src;
 
             // Show and play the selected video
             if (choice === 'yes') {
                 yesVideo.style.display = "block";
-                yesVideo.play();
             } else {
                 noVideo.style.display = "block";
-                noVideo.play();
             }
         }
     </script>
